// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`or '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`or 'this' conditional success tests AST to match snapshot 1`] = `"this"`;

exports[`or 'that' conditional success tests AST to match snapshot 1`] = `"that"`;

exports[`or 'thisthat' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`or 'thatthis' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`or 'foo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
